--- a/sample-file/index.html
+++ b/sample-file/index.html
@@ -4,28 +4,32 @@
         <title>File Sample</title>
         <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no;" />
         <meta charset="utf-8">
- 
-        <!-- iPad/iPhone specific css below, add after your main css >
-        <link rel="stylesheet" media="only screen and (max-device-width: 1024px)" href="ipad.css" type="text/css" />       
-        <link rel="stylesheet" media="only screen and (max-device-width: 480px)" href="iphone.css" type="text/css" />       
-        -->
-        <!-- If your application is targeting iOS BEFORE 4.0 you MUST put json2.js from http://www.JSON.org/json2.js into your www directory and include it here -->
-
+        <link href="styles/main.css" rel="stylesheet" type="text/css" />   
         <script type="text/javascript" charset="utf-8" src="cordova.js"></script>
         <script type="text/javascript" charset="utf-8" src="scripts/fileHelper.js"></script>
         <script type="text/javascript" charset="utf-8" src="scripts/main.js"></script>
     </head>
     <body>
-        <h1>File Sample</h1>
-        <label>
-            File Name:
-            <input id="fileNameInput" value="readme.txt"/>
-        </label>
-        <hr/>
-        <button id="writeFileButton">Write to File</button><br/>
-        <button id="readFileButton">Read from File</button><br/>
-        <button id="deleteFileButton">Delete File</button>
-        <hr/>
-        <div id="results"></div>
+        <header class="header">
+            <h1>File Sample</h1>
+        </header>
+        <div class="content">
+            <input class="inputBox" id="fileNameInput" placeholder="File name"/>
+            <input class="inputBox" id="textInput" placeholder="Text"/>
+            
+            <hr class="horizontalLine" />
+            <div>
+
+                <button class="button" id="writeFileButton">Write</button>
+                <button class="button" id="readFileButton">Read</button>
+                <button class="button big" id="deleteFileButton">Delete</button>
+            </div>
+            <hr class="horizontalLine" />
+            
+            <div id="result"></div>
+        </div>
+        <footer class="footer">
+            <div>Cordova API Samples</div>
+        </footer>
     </body>
 </html>
