--- a/sample-file/index.html
+++ b/sample-file/index.html
@@ -2,7 +2,7 @@
 <html>
 	<head>
 		<title>File Sample</title>
-		<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no;" />
+		<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
 		<meta charset="utf-8">
 		<link href="styles/main.css" rel="stylesheet" type="text/css" />
 		<script type="text/javascript" charset="utf-8" src="cordova.js"></script>
